[CI] develop.yml 수정 #28

--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -1,8 +1,6 @@
 name: CI/CD with Gradle
 
 on:
-  push:
-    branches: [ "develop" ]
   pull_request:
     types: [ closed ]
 
@@ -24,7 +22,9 @@ jobs:
 
       - name: Make application.yml
         run: |
-          cd ./src/main/resources
+          cd ./src/main
+          mkdir resources
+          cd resources
           touch ./application.yml
           echo "${{ secrets.APPLICATION_YML }}" > ./application.yml
 
