[CHORE] Docker 실행시 타임존 추가 #45

--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -52,4 +52,4 @@ jobs:
             sudo docker pull ${{ secrets.DOCKER_REPO }}/2024_ds_fest
             docker-compose up -d
             docker image prune -f
-            docker run -d --log-driver=syslog -p 8080:8080 ${{ secrets.DOCKER_REPO }}/2024_ds_fest
+            docker run -d --log-driver=syslog -p 8080:8080 -e TZ=Asia/Seoul ${{ secrets.DOCKER_REPO }}/2024_ds_fest
